DEPLOYMENT SET UP
add procfile whitenoise

add whitenoise middleware

add .env changes

add req.txt

add dj database

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,14 @@ name = "pypi"
 django = "*"
 python-decouple = "*"
 djangorestframework = "*"
+markdown = "*"
+django-filter = "*"
+pylint = "*"
+"autopep8" = "*"
+gunicorn = "*"
+"psycopg2-binary" = "*"
+dj-database-url = "*"
+whitenoise = "*"
 
 [dev-packages]
 
